Fix strip overflow

--- a/main.css
+++ b/main.css
@@ -57,7 +57,7 @@ header {
 }
 
 .stripe {
-  height: 64rem;
+  height: 56rem;
   left: 0;
   right: 0;
   transform: rotate(-8deg);
@@ -68,7 +68,7 @@ header {
   color: var(--purple-frost);
   display: flex;
   flex-direction: column;
-  height: 90%;
+  height: 70%;
   justify-content: center;
   margin: 0 10%;
   position: relative;
